[project]
name = "libskyblock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hazyfossa", email = "hazyfossa@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "msgspec>=0.19.0", "readable-number>=0.1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
