[project]
name = "libskyblock"
version = "0.1.0"
description = "A fully typed pythonic wrapper for the Hypixel Skyblock API."
readme = "README.md"
authors = [{ name = "hazyfossa", email = "hazyfossa@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "dulwich>=0.22.7",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
    "readable-number>=0.1.3",
]

[project.optional-dependencies]
color = [
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
